manifests/nginx/controller/division-operator-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "division-operator"
  # This has to go in default to point to linkerd
  # namespace: "team-division-operator"
  labels:
    app: "division-operator"
    environment: "preprod"
spec:
  # type: ExternalName
  # externalName: nginx.machines.hostname
  # externalName: l5d.default.svc.cluster.local
  type: NodePort
  selector:
    app: l5d
  ports:
  - name: my-http
    port: 80
    targetPort: nginx-redirect
  # - name: edge-http
  #   port: 81
# ---
# kind: Endpoints
# apiVersion: v1
# metadata:
#   name: "division-operator"
#   namespace: "team-division-operator"
# subsets:
#   - addresses:
#       - ip: 10.2.103.2
#     ports:
#       - port: 8000
