manifests/nginx/controller/nginx-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  namespace: edge-gateway
  labels:
    app: nginx-ingress
spec:
  type: NodePort
  ports:
  - name: first-thing
    targetPort: my-http
    port: 80
    nodePort: 31111
  selector:
    app: nginx-ingress
